Replace Balance type with Decimal (#516)
* Add rust-decimal instead of Balance

* Fix cargo test

* Fixed tests

* Update deposit extrinsic  (#518)

* fix: add deposit overflow check

* fix: update deposit to 10^27 from 10^21

* fix: add unit tests for deposit overflow

* fix: update unit test for deposit overflow

* Cargo fmt and remove faucet and ido

* Fixing cargo tests.rs

* fix: warnings and remove unused code (#520)

* fix: warnings and remove unused code

* fix: remove unused variables

* fix: remove create_withdrawal_500

* Tests passing

* Some stuff

* Delete unused RPC code

* fix: failing unit tests of onchain events overflow (#521)

Co-authored-by: zktony <zktony@protonmail.com>
Co-authored-by: Faisal Ahmed <42486737+felixfaisal@users.noreply.github.com>

--- a/pallets/ocex/Cargo.toml
+++ b/pallets/ocex/Cargo.toml
@@ -23,7 +23,7 @@ sp-std = { default-features = false, branch = "polkadot-v0.9.28", git = 'https:/
 polkadex-primitives = { default-features = false, branch = "polkadot-v0.9.28", git = "https://github.com/Polkadex-Substrate/polkadex-primitives.git" }
 pallet-timestamp = { default-features = false, branch = "polkadot-v0.9.28", git = 'https://github.com/paritytech/substrate' }
 ias-verify = { default-features = false,version = "0.1.4", branch = "polkadot-v0.9.28", git = "https://github.com/Polkadex-Substrate/pallets" }
-pallet-ocex-primitives = { path = "../../pallets/ocex/common", default-features = false}
+rust_decimal = {git ="https://github.com/Polkadex-Substrate/rust-decimal.git", branch="master", features = ["scale-codec"], default-features = false }
 
 [dev-dependencies]
 pallet-balances = { branch = "polkadot-v0.9.28", git = 'https://github.com/paritytech/substrate.git' }
@@ -32,7 +32,6 @@ pallet-timestamp = { branch = "polkadot-v0.9.28", git = 'https://github.com/pari
 sp-application-crypto = { branch="polkadot-v0.9.28", git = 'https://github.com/paritytech/substrate'}
 sp-keystore = { branch = "polkadot-v0.9.28",git = 'https://github.com/paritytech/substrate' }
 frame-benchmarking = { branch = "polkadot-v0.9.28", git = 'https://github.com/paritytech/substrate.git' }
-ckb-merkle-mountain-range = "0.5.0"
 anyhow = "1.0.56"
 sp-io = { default-features = false, branch = "polkadot-v0.9.28", git = 'https://github.com/paritytech/substrate.git' }
 
@@ -49,7 +48,7 @@ std = [
     "polkadex-primitives/std",
     "pallet-timestamp/std",
     "ias-verify/std",
-    "pallet-ocex-primitives/std"
+    "rust_decimal/std"
 ]
 #TODO: [#435] Currently broken, will be fixed in different issue
 #runtime-benchmarks = ["frame-benchmarking/runtime-benchmarks"]
