--- a/pallets/ocex/Cargo.toml
+++ b/pallets/ocex/Cargo.toml
@@ -34,6 +34,8 @@ sp-keystore = { branch = "polkadot-v0.9.28",git = 'https://github.com/paritytech
 frame-benchmarking = { branch = "polkadot-v0.9.28", git = 'https://github.com/paritytech/substrate.git' }
 anyhow = "1.0.56"
 sp-io = { default-features = false, branch = "polkadot-v0.9.28", git = 'https://github.com/paritytech/substrate.git' }
+test-utils = { git = "https://github.com/Polkadex-Substrate/pallets.git", branch = "polkadot-v0.9.28", default-features = false }
+
 
 [features]
 default = ["std"]
