Get Balances RPC call  (#510)
* fix: add rpc for account balances in asset-handler pallet

* fix: apply fmt with nightly flag

* fix: add unit test for account_balances helper function

* fix: apply review comment fixes

* fix: codecov config

--- a/node/Cargo.toml
+++ b/node/Cargo.toml
@@ -31,6 +31,7 @@ itertools = "0.10.1"
 jsonrpsee = { version = "0.15.1", features = ["server"] }
 # local dependencies
 node-polkadex-runtime = { path = "../runtime", version = "3.0.0" }
+pallet-asset-handler-rpc = {path = "../pallets/asset-handler/rpc"}
 polkadex-client = { path = "../client"}
 
 # Substrate dependencies
