--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -103,6 +103,8 @@ pallet-ocex-lmp = {path = "../pallets/ocex", default-features = false}
 # Try Runtime
 frame-try-runtime = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28", optional = true, default-features = false }
 
+pallet-asset-handler-runtime-api = {path = "../pallets/asset-handler/rpc/runtime-api", default-features = false}
+
 [build-dependencies]
 substrate-wasm-builder = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }
 
