--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ members = [
     "clients/ocex",
     "node",
     "runtime",
+    "primitives/ocex",
     "pallets/pdex-migration",
     "pallets/chainbridge",
     "pallets/asset-handler",
