Something is going wrong

--- a/pallets/ocex/Cargo.toml
+++ b/pallets/ocex/Cargo.toml
@@ -24,6 +24,8 @@ polkadex-primitives = { default-features = false, branch = "polkadot-v0.9.28", g
 pallet-timestamp = { default-features = false, branch = "polkadot-v0.9.28", git = 'https://github.com/paritytech/substrate' }
 ias-verify = { default-features = false,version = "0.1.4", branch = "polkadot-v0.9.28", git = "https://github.com/Polkadex-Substrate/pallets" }
 rust_decimal = {git ="https://github.com/Polkadex-Substrate/rust-decimal.git", branch="master", features = ["scale-codec"], default-features = false }
+ocex-primitives = {path="../../primitives/ocex", default-features = false}
+
 
 [dev-dependencies]
 pallet-balances = { branch = "polkadot-v0.9.28", git = 'https://github.com/paritytech/substrate.git' }
@@ -40,6 +42,7 @@ test-utils = { git = "https://github.com/Polkadex-Substrate/pallets.git", branch
 [features]
 default = ["std"]
 std = [
+    "ocex-primitives/std",
     "codec/std",
     "log/std",
     "scale-info/std",
