--- a/pallets/ocex/Cargo.toml
+++ b/pallets/ocex/Cargo.toml
@@ -22,7 +22,6 @@ sp-runtime = { default-features = false, branch = "polkadot-v0.9.28", git = 'htt
 sp-std = { default-features = false, branch = "polkadot-v0.9.28", git = 'https://github.com/paritytech/substrate.git' }
 polkadex-primitives = { default-features = false, branch = "polkadot-v0.9.28", git = "https://github.com/Polkadex-Substrate/polkadex-primitives.git" }
 pallet-timestamp = { default-features = false, branch = "polkadot-v0.9.28", git = 'https://github.com/paritytech/substrate' }
-ias-verify = { default-features = false,version = "0.1.4", branch = "polkadot-v0.9.28", git = "https://github.com/Polkadex-Substrate/pallets" }
 rust_decimal = {git ="https://github.com/Polkadex-Substrate/rust-decimal.git", branch="master", features = ["scale-codec"], default-features = false }
 ocex-primitives = {path="../../primitives/ocex", default-features = false}
 sp-application-crypto = { branch="polkadot-v0.9.28", git = 'https://github.com/paritytech/substrate', default-features = false}
@@ -36,6 +35,7 @@ sp-keystore = { branch = "polkadot-v0.9.28",git = 'https://github.com/paritytech
 frame-benchmarking = { branch = "polkadot-v0.9.28", git = 'https://github.com/paritytech/substrate.git' }
 anyhow = "1.0.56"
 sp-io = { default-features = false, branch = "polkadot-v0.9.28", git = 'https://github.com/paritytech/substrate.git' }
+#to remove after test fixes
 test-utils = { git = "https://github.com/Polkadex-Substrate/pallets.git", branch = "polkadot-v0.9.28", default-features = false }
 
 
@@ -53,7 +53,6 @@ std = [
     "sp-std/std",
     "polkadex-primitives/std",
     "pallet-timestamp/std",
-    "ias-verify/std",
     "rust_decimal/std"
 ]
 #TODO: [#435] Currently broken, will be fixed in different issue
