--- a/pallets/ocex/Cargo.toml
+++ b/pallets/ocex/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "pallet-ocex-lmp"
-version = "4.0.0-dev"
+version = "4.0.0"
 authors = ["Gautham J <gautham@polkadex.trade>"]
 edition = "2021"
 license = "GNU GPL v3"
