--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -177,42 +177,19 @@ std = [
     "chainbridge/std"
 ]
 runtime-benchmarks = [
-    "frame-benchmarking",
-    "frame-support/runtime-benchmarks",
-    "frame-system-benchmarking",
-    "frame-system/runtime-benchmarks",
-    "pallet-election-provider-multi-phase/runtime-benchmarks",
+    "sp-io/disable_panic_handler",
+    "sp-io/disable_oom",
+    "sp-io/disable_allocator",
     "sp-runtime/runtime-benchmarks",
-    "pallet-babe/runtime-benchmarks",
-    "pallet-balances/runtime-benchmarks",
-    "pallet-bounties/runtime-benchmarks",
-    "pallet-collective/runtime-benchmarks",
-    "pallet-elections-phragmen/runtime-benchmarks",
-    "pallet-grandpa/runtime-benchmarks",
-    "pallet-identity/runtime-benchmarks",
-    "pallet-im-online/runtime-benchmarks",
-    "pallet-indices/runtime-benchmarks",
-    "pallet-child-bounties/runtime-benchmarks",
-    "pallet-preimage/runtime-benchmarks",
-    "pallet-bags-list/runtime-benchmarks",
-    "pallet-membership/runtime-benchmarks",
-    "pallet-multisig/runtime-benchmarks",
-    "pallet-proxy/runtime-benchmarks",
-    "pallet-scheduler/runtime-benchmarks",
-    'pallet-society/runtime-benchmarks',
-    "pallet-staking/runtime-benchmarks",
-    "pallet-timestamp/runtime-benchmarks",
-    "pallet-tips/runtime-benchmarks",
-    "pallet-treasury/runtime-benchmarks",
-    "pallet-democracy/runtime-benchmarks",
-    "pallet-utility/runtime-benchmarks",
-    "frame-system-benchmarking",
-    "orml-vesting/runtime-benchmarks",
     "hex-literal",
-    "frame-election-provider-support/runtime-benchmarks",
-    #"pdex-migration/runtime-benchmarks"
+    "frame-benchmarking",
+    "frame-system-benchmarking",
+    "frame-support/runtime-benchmarks",
+    "frame-system/runtime-benchmarks",
+    "pallet-collective/runtime-benchmarks",
+    "pallet-society/runtime-benchmarks",
+    "pallet-ocex-lmp/runtime-benchmarks"
 ]
-
 try-runtime = [
     "frame-executive/try-runtime",
     "frame-try-runtime",
