--- a/pallets/ocex/Cargo.toml
+++ b/pallets/ocex/Cargo.toml
@@ -24,7 +24,7 @@ polkadex-primitives = { default-features = false, tag = "polkadot-v0.9.28v0.1.4"
 pallet-timestamp = { default-features = false, branch = "polkadot-v0.9.28", git = 'https://github.com/paritytech/substrate' }
 ias-verify = { default-features = false,version = "0.1.4", branch = "polkadot-v0.9.28", git = "https://github.com/Polkadex-Substrate/pallets" }
 rust_decimal = {git ="https://github.com/Polkadex-Substrate/rust-decimal.git", branch="master", features = ["scale-codec"], default-features = false }
-sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28", default-features = false }
+sp-core = { version = "6.0.0", default-features = false }
 frame-benchmarking = { default-features = false, branch = "polkadot-v0.9.28", git = 'https://github.com/paritytech/substrate.git', optional = true }
 test-utils = { git = "https://github.com/Polkadex-Substrate/pallets.git", branch = "polkadot-v0.9.28", default-features = false, optional = true }
 getrandom = { version = "0.2.7", features = ["js"], optional = true }
@@ -39,7 +39,6 @@ frame-benchmarking = { branch = "polkadot-v0.9.28", git = 'https://github.com/pa
 anyhow = "1.0.56"
 sp-io = { default-features = false, branch = "polkadot-v0.9.28", git = 'https://github.com/paritytech/substrate.git' }
 test-utils = { git = "https://github.com/Polkadex-Substrate/pallets.git", branch = "polkadot-v0.9.28", default-features = false }
-
 
 [features]
 default = ["std"]
@@ -57,11 +56,12 @@ std = [
     "rust_decimal/std",
     "sp-core/std"
 ]
-#TODO: [#435] Currently broken, will be fixed in different issue
 runtime-benchmarks = [
-    "frame-benchmarking",
     "frame-support/runtime-benchmarks",
     "frame-system/runtime-benchmarks",
+    "frame-benchmarking/runtime-benchmarks",
+    "sp-runtime/runtime-benchmarks",
+    "sp-core/full_crypto",
     "pallet-timestamp/runtime-benchmarks",
     "getrandom",
     "test-utils"
