--- a/pallets/asset-handler/rpc/runtime-api/Cargo.toml
+++ b/pallets/asset-handler/rpc/runtime-api/Cargo.toml
@@ -12,7 +12,7 @@ codec = { package = "parity-scale-codec", version = "3.0.0", default-features = 
 sp-api = {   git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28", default-features = false }
 sp-runtime = {  git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28", default-features = false }
 sp-std = {   git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28", default-features = false }
-polkadex-primitives = { default-features = false, branch = "nap-node-fix-ingress", git = "https://github.com/Polkadex-Substrate/polkadex-primitives.git" }
+polkadex-primitives = { default-features = false, tag = "polkadot-v0.9.28v0.1.6", git = "https://github.com/Polkadex-Substrate/polkadex-primitives.git" }
 [features]
 default = ["std"]
 std = [
