--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -92,7 +92,7 @@ pallet-society = { default-features = false, git = "https://github.com/paritytec
 orml-vesting = { git = "https://github.com/Polkadex-Substrate/open-runtime-module-library.git", branch="polkadot-v0.9.28", default-features = false }
 
 # Local Dependecies
-polkadex-primitives = { default-features = false, branch = "nap-node-fix-ingress", git = "https://github.com/Polkadex-Substrate/polkadex-primitives.git" }
+polkadex-primitives = { default-features = false, tag = "polkadot-v0.9.28v0.1.6", git = "https://github.com/Polkadex-Substrate/polkadex-primitives.git" }
 pdex-migration = { path = "../pallets/pdex-migration", default-features = false }
 asset-handler = { path = "../pallets/asset-handler", default-features = false}
 chainbridge = { path ="../pallets/chainbridge", default-features = false}
