--- a/pallets/ocex/Cargo.toml
+++ b/pallets/ocex/Cargo.toml
@@ -24,8 +24,7 @@ polkadex-primitives = { default-features = false, tag = "polkadot-v0.9.28v0.1.4"
 pallet-timestamp = { default-features = false, branch = "polkadot-v0.9.28", git = 'https://github.com/paritytech/substrate' }
 ias-verify = { default-features = false,version = "0.1.4", branch = "polkadot-v0.9.28", git = "https://github.com/Polkadex-Substrate/pallets" }
 rust_decimal = {git ="https://github.com/Polkadex-Substrate/rust-decimal.git", branch="master", features = ["scale-codec"], default-features = false }
-sp-core = { branch = "polkadot-v0.9.28", git = 'https://github.com/paritytech/substrate.git', default-features = false }
-frame-benchmarking = { default-features = false, branch = "polkadot-v0.9.28", git = 'https://github.com/paritytech/substrate.git', optional = true }
+frame-benchmarking = { default-features = false, branch = "polkadot-v0.9.28", git = 'https://github.com/paritytech/substrate.git' }
 test-utils = { git = "https://github.com/Polkadex-Substrate/pallets.git", branch = "polkadot-v0.9.28", default-features = false, optional = true }
 getrandom = { version = "0.2.7", features = ["js"], optional = true }
 
@@ -55,16 +54,14 @@ std = [
     "pallet-timestamp/std",
     "ias-verify/std",
     "rust_decimal/std",
-    "sp-core/std"
 ]
 runtime-benchmarks = [
     "frame-support/runtime-benchmarks",
     "frame-system/runtime-benchmarks",
     "frame-benchmarking/runtime-benchmarks",
     "sp-runtime/runtime-benchmarks",
-    "sp-core/full_crypto",
+    "test-utils/default",
+    "getrandom/wasm-bindgen",
     "pallet-timestamp/runtime-benchmarks",
-    "getrandom",
-    "test-utils"
 ]
 try-runtime = ["frame-support/try-runtime"]
