--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -71,9 +71,9 @@ sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0
 sp-finality-grandpa = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28", default-features = false }
 
 #added
-sp-authority-discovery = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }
+sp-authority-discovery = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28", optional = true }
 sp-block-builder = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }
-sp-consensus-babe = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28", optional = true }
+sp-consensus-babe = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }
 sp-core = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }
 sp-inherents = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }
 sp-staking = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }
@@ -92,23 +92,23 @@ orml-vesting = { git = "https://github.com/Polkadex-Substrate/open-runtime-modul
 # Local Dependecies
 polkadex-primitives = { default-features = false, tag = "polkadot-v0.9.28v0.1.4", git = "https://github.com/Polkadex-Substrate/polkadex-primitives.git" }
 pdex-migration = { path = "../pallets/pdex-migration", default-features = false }
-asset-handler = { path = "../pallets/asset-handler", default-features = false}
-chainbridge = { path ="../pallets/chainbridge", default-features = false}
+asset-handler = { path = "../pallets/asset-handler", default-features = false }
+chainbridge = { path ="../pallets/chainbridge", default-features = false }
 
 # Orderbook 
-pallet-ocex-lmp = {path = "../pallets/ocex", default-features = false}
+pallet-ocex-lmp = {path = "../pallets/ocex", default-features = false }
 
 # Try Runtime
 frame-try-runtime = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28", optional = true, default-features = false }
 
-pallet-asset-handler-runtime-api = {path = "../pallets/asset-handler/rpc/runtime-api", default-features = false}
+pallet-asset-handler-runtime-api = {path = "../pallets/asset-handler/rpc/runtime-api", default-features = false }
 
 [build-dependencies]
 substrate-wasm-builder = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }
 
 [dev-dependencies]
-sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }
-pallet-society = {  git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28"}
+sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28", features = ["full_crypto"] }
+pallet-society = {  git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }
 
 [features]
 default = ["std"]
@@ -183,41 +183,23 @@ runtime-benchmarks = [
 	"frame-system/runtime-benchmarks",
     "frame-benchmarking/runtime-benchmarks",
     "frame-system-benchmarking",
-    "sp-finality-grandpa/default",
-    "sp-npos-elections/default",
-    "sp-consensus-babe/default",
-    "sp-authority-discovery/default",
 	"sp-runtime/runtime-benchmarks",
-	"pallet-assets/runtime-benchmarks",
-	"pallet-babe/runtime-benchmarks",
-	"pallet-bags-list/runtime-benchmarks",
-	"pallet-balances/runtime-benchmarks",
-	"pallet-bounties/runtime-benchmarks",
-	"pallet-child-bounties/runtime-benchmarks",
-	"pallet-collective/runtime-benchmarks",
-	"pallet-democracy/runtime-benchmarks",
-	"pallet-election-provider-multi-phase/runtime-benchmarks",
-	"pallet-elections-phragmen/runtime-benchmarks",
-	"pallet-grandpa/runtime-benchmarks",
-	"pallet-identity/runtime-benchmarks",
-	"pallet-im-online/runtime-benchmarks",
-	"pallet-indices/runtime-benchmarks",
-	"pallet-membership/runtime-benchmarks",
-	"pallet-multisig/runtime-benchmarks",
-	"pallet-preimage/runtime-benchmarks",
-	"pallet-proxy/runtime-benchmarks",
-	"pallet-scheduler/runtime-benchmarks",
-	"pallet-recovery/runtime-benchmarks",
-	"pallet-society/runtime-benchmarks",
-	"pallet-staking/runtime-benchmarks",
-	"pallet-timestamp/runtime-benchmarks",
-	"pallet-tips/runtime-benchmarks",
-	"pallet-treasury/runtime-benchmarks",
-	"pallet-utility/runtime-benchmarks",
+    "sp-authority-discovery/std",
+    "sp-npos-elections/std",
+    "sp-finality-grandpa/std",
+    "sp-consensus-babe/std",
+    "pallet-grandpa/runtime-benchmarks",
+    "pallet-babe/runtime-benchmarks",
+    "pallet-im-online/runtime-benchmarks",
+    "pallet-assets/runtime-benchmarks",
+    "pallet-multisig/runtime-benchmarks",
+    "pallet-identity/runtime-benchmarks",
+    "pallet-staking/runtime-benchmarks",
     #our
     "pallet-ocex-lmp/runtime-benchmarks",
     "chainbridge/runtime-benchmarks",
     "asset-handler/runtime-benchmarks",
+    "pdex-migration/runtime-benchmarks",
     "hex-literal",
 ]
 try-runtime = [
